Chapter 3 : Bagging and Random Forests

--- a/Python/Machine Learning with Tree-Based Models in Python/takeaways.ipynb
+++ b/Python/Machine Learning with Tree-Based Models in Python/takeaways.ipynb
@@ -54,11 +54,26 @@
     "    - Sensitive to small variations in training set\n",
     "    - High variance overfits the model\n",
     "- Solution : Ensemble learning\n",
+    "    - This is a joint modeling where many models come together to solve a single problem\n",
     "    - Train different models on same dataset\n",
     "    - Let each model make its prediction\n",
-    "    - Aggregate predictions of individual models (eg: hard-voting)\n",
+    "    - Aggregate predictions of individual models \n",
     "    - One model's weakness is covered by another model's strength in that particular task\n",
-    "    - Final model is combination of models that are skillfull in different ways"
+    "    - Final model is combination of models that are skillfull in different ways\n",
+    "    - Hard-voting : \n",
+    "        - Ensemble method that models data using majority of vote\n",
+    "    - Bagging or Bootstrap aggregating : \n",
+    "        - Ensemble method that use bootstrap with resampling on training data. \n",
+    "        - Base estimator : Decision tree, neural net, logistic regression etc\n",
+    "        - Reduces variance in individual models (Because of bootstrapping, variance of sample becomes smaller)\n",
+    "        - OOB evaluation : normally on average 33% sample data remains unseen, use that data for evaluation of scoring\n",
+    "        - Classification : Final prediction is obtained by majority voting\n",
+    "        - Regression : Final prediction is obtained by taking the mean\n",
+    "    - Random Forest:\n",
+    "        - base estimator : Decision tree\n",
+    "        - bootstrap samples without replacement and further randomization involved\n",
+    "        - Classification : Final prediction is obtained by majority voting\n",
+    "        - Regression : Final prediction is obtained by taking the mean\n"
    ]
   },
   {
@@ -180,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ensemble Learning"
+    "### Ensemble Learning : Hard Voting"
    ]
   },
   {
@@ -201,27 +216,102 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier as KNN\n",
-    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.metrics import mean_squared_error as MSE\n",
     "\n",
     "# Split data into 70% train and 30% test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= 0.3, random_state= 42)\n",
     "# Instantiate individual classifiers\n",
     "lr = LogisticRegression(random_state=42)\n",
     "knn = KNN()\n",
-    "dt = DecisionTreeClassifier(random_state=42)\n",
+    "dt = DecisionTreeClassifier(random_state=42,max_depth=4, min_samples_leaf=0.16)\n",
     "classifiers = [('Logistic Regression', lr),\n",
     "                ('K Nearest Neighbours', knn),\n",
     "                ('Classification Tree', dt)]\n",
-    "# Instantiate an ensemble VotingClassifier 'vc'\n",
-    "vc = VotingClassifier(estimators=classifiers)\n",
+    "\n",
+    "# Instantiate an ensemble VotingClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "ensemble_model = VotingClassifier(estimators=classifiers)\n",
+    "\n",
+    "# Instantiate an ensemble VotingRegressor\n",
+    "ensemble_model = VotingRegressor(estimators=regressors)\n",
+    "\n",
+    "# Instantiate an ensemble BaggingClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "ensemble_model = BaggingClassifier(base_estimator=dt, n_estimators=300,oob_score=True, n_jobs=-1)\n",
+    "oob_accuracy = bc.oob_score_\n",
+    "\n",
+    "# Instantiate an ensemble BaggingRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "base_regressor = DecisionTreeRegressor(max_depth=8, min_samples_leaf=0.13, random_state=3)\n",
+    "ensemble_model = BaggingRegressor(base_estimator=base_regressor, n_estimators=300, oob_score=True, n_jobs=-1)\n",
+    "oob_score = ensemble_model.oob_score_\n",
+    "\n",
+    "# Instantiate an ensemble RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "ensemble_model = RandomForestRegressor(n_estimators=400, min_samples_leaf=0.12, random_state=42)\n",
+    "\n",
+    "# Instantiate an ensemble RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "ensemble_model = RandomForestClassifier(n_estimators=400, random_state=42)\n",
+    "\n",
     "# Train using traing set\n",
-    "vc.fit(X_train, y_train)\n",
+    "ensemble_model.fit(X_train, y_train)\n",
     "# Predict with test set\n",
-    "y_pred = vc.predict(X_test)\n",
-    "# Evaluate accuracy \n",
+    "y_pred = ensemble_model.predict(X_test)\n",
+    "# Evaluate accuracy for classification\n",
     "print(accuracy_score(y_test, y_pred))\n",
+    "# Evaluate RMSE for regression\n",
+    "rmse = MSE(y_test, y_pred)**(1/2)\n",
+    "# Visualize features importances\n",
+    "importances = pd.Series(ensemble_model.feature_importances_, index = X.columns)\n",
+    "sorted_importances = importances.sort_values()\n",
+    "sorted_importances.plot(kind='barh', color='lightgreen')\n",
+    "plt.show()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ensemble : Bagging (Sampling with replacement)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/03.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest (Sampling without replacement)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/03.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
