--- a/Python/Machine Learning with Tree-Based Models in Python/takeaways.ipynb
+++ b/Python/Machine Learning with Tree-Based Models in Python/takeaways.ipynb
@@ -62,18 +62,37 @@
     "    - Final model is combination of models that are skillfull in different ways\n",
     "    - Hard-voting : \n",
     "        - Ensemble method that models data using majority of vote\n",
-    "    - Bagging or Bootstrap aggregating : \n",
+    "    - Bagging or Bootstrap aggregating (Sampling with replacement) : \n",
     "        - Ensemble method that use bootstrap with resampling on training data. \n",
     "        - Base estimator : Decision tree, neural net, logistic regression etc\n",
     "        - Reduces variance in individual models (Because of bootstrapping, variance of sample becomes smaller)\n",
     "        - OOB evaluation : normally on average 33% sample data remains unseen, use that data for evaluation of scoring\n",
     "        - Classification : Final prediction is obtained by majority voting\n",
     "        - Regression : Final prediction is obtained by taking the mean\n",
-    "    - Random Forest:\n",
+    "    - Random Forest (Sampling without replacement):\n",
     "        - base estimator : Decision tree\n",
     "        - bootstrap samples without replacement and further randomization involved\n",
     "        - Classification : Final prediction is obtained by majority voting\n",
-    "        - Regression : Final prediction is obtained by taking the mean\n"
+    "        - Regression : Final prediction is obtained by taking the mean\n",
+    "    - Boosting:\n",
+    "        - Combine weak learners (models that are slightly better than random guessing) to form a strong learner\n",
+    "        - learners are placed sequentially, each learner trying to correct its predecessor\n",
+    "        - Adaboost or adaptive boosting (through contribution/weight adjustment) : \n",
+    "            - predictor pays more information to wrongly classified target by predecessor and apply a weight or penalty\n",
+    "            - each predictor has an assigned co-efficient (alpha), that signifies it's contribution in final prediction\n",
+    "            - before the data goes to the next predictor for training, alpha is used to adjust the weights of data \n",
+    "            - Learning rate ita contributes the adjustment of co-efficient alpha\n",
+    "            - Classification : Final outcome decided by weighted majority voting\n",
+    "            - Regression : Final outcome decided by weighted average\n",
+    "        - Gradient boosting (through training on gradients/residuals) :\n",
+    "            - sequential correction of predecessor's error instead of co-efficient adjustment like adaboost\n",
+    "            - Instead of adjusting weight like adaboost, predictor trains using predecessor's residuals as labels\n",
+    "            - Instead of weak learner like adaboost, it uses CART learners as base learners\n",
+    "            - Learning rate or shrinkage tradeoff : Decreased learning rate = increased number of estimators\n",
+    "        - Stochastic gradient boosting (sampling without replacement on gradient boosting to increase variance)\n",
+    "            - Gradient boosting problem : May lead to CARTs using the same split points and maybe the same features which may lead to increased bias. This may lead to underfitting problem.\n",
+    "            - Goal : to reduce bias and increase variance.\n",
+    "            - Solution : Randomly (40%-80% of the training set) are sampled without replacement."
    ]
   },
   {
@@ -255,6 +274,18 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "ensemble_model = RandomForestClassifier(n_estimators=400, random_state=42)\n",
     "\n",
+    "# Instantiate an ensemble AdaBoostClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "ensemble_model = AdaBoostClassifier(base_estimator=dt, n_estimators=100) # dt is weak, has max depth of 1\n",
+    "y_pred_proba = ensemble_model.predict_proba(X_test)[:,1]\n",
+    "# Evaluate testing roc_auc_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "adb_clf_roc_auc_score = roc_auc_score(y_test, y_pred_proba)\n",
+    "\n",
+    "# Instantiate an ensemble GradientBoostingRegressor, (max_features=0.2, subsample=0.8) makes it stochastic gradient boosting\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "ensemble_model = GradientBoostingRegressor(max_depth=1, subsample=0.8, max_features=0.2, n_estimators=300, random_state=42)\n",
+    "\n",
     "# Train using traing set\n",
     "ensemble_model.fit(X_train, y_train)\n",
     "# Predict with test set\n",
@@ -306,6 +337,42 @@
    "source": [
     "<center><img src=\"images/03.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
     "<center><img src=\"images/03.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adaboost  (Adaptive Boosting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/04.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
    ]
   },
   {
