Chapter 5 : Model Tuning

--- a/Python/Machine Learning with Tree-Based Models in Python/takeaways.ipynb
+++ b/Python/Machine Learning with Tree-Based Models in Python/takeaways.ipynb
@@ -299,6 +299,28 @@
     "sorted_importances = importances.sort_values()\n",
     "sorted_importances.plot(kind='barh', color='lightgreen')\n",
     "plt.show()\n",
+    "\n",
+    "# Hyperparameter Tuning\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, KFold\n",
+    "# See what parameters can be tuned\n",
+    "ryour_dt_model.get_params()\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "params_dt = {\n",
+    "    'max_depth': [3, 4,5, 6],\n",
+    "    'min_samples_leaf': [0.04, 0.06, 0.08],\n",
+    "    'max_features': [0.2, 0.4,0.6, 0.8]\n",
+    "}\n",
+    "model_cv = GridSearchCV(estimator=your_dt_model,\n",
+    "    param_grid=params_dt,\n",
+    "    cv=kf,\n",
+    "    scoring='neg_mean_squared_error',\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1)\n",
+    "model_cv.fit(X_train, y_train)\n",
+    "best_hyperparams = model_cv.best_params_\n",
+    "best_model = model_cv.best_estimator_\n",
+    "y_pred = best_model.predict(X_test)\n",
+    "best_score = best_model.best_score_\n",
     "```"
    ]
   },
@@ -378,7 +400,33 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyperparameter Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Problem: So many models can be build. But among these, find an optimal model that yields optimal result.\n",
+    "- Solution: Train with a set of adjustable parameters and compare the results to find the optimal model\n",
+    "- Rule of thumb : Cross validation is used to estimate the generalization performance.\n",
+    "- Curse of dimensionality : exhaustively searching results in increase of dimensions with the increase of grid.\n",
+    "- Best practice : Do this when you really need optimal solution since it does not make a bad model into a good model.\n",
+    "- optimal hyperparameters = set of hyperparameters corresponding to the best CV score.\n",
+    "- Some algorithms:\n",
+    "    - Grid Search\n",
+    "    - Random Search\n",
+    "    - Bayesian Optimization\n",
+    "    - Genetic Algorithms"
+   ]
   }
  ],
  "metadata": {
