Chapter 2 : Data Cleaning and Imputation

--- a/Python/Exploratory Data Analysis in Python/takeaways.ipynb
+++ b/Python/Exploratory Data Analysis in Python/takeaways.ipynb
@@ -24,7 +24,18 @@
     "    - generate hypothesis for experiments\n",
     "    - explore the grouped distribution\n",
     "    - Visualize numeric distribution (histogram) and categorical distribution (barplot)\n",
-    "    - See and Visualize numeric mean, max with boxplot to gain insight about outliers"
+    "    - Handle outliers\n",
+    "        - See and Visualize numeric mean, max with boxplot to gain insight about outliers\n",
+    "        - filter data to drop outliers\n",
+    "    - Handle missing data:\n",
+    "        - Drop data if missing data in the column <= 5%\n",
+    "        - Impute missing values otherwise\n",
+    "        - Impute by sub-group since each subgroup may contain different type of data\n",
+    "    - Handle diverse categories:\n",
+    "        - There might be so many diverse categories that needs to be generalized\n",
+    "        - eg: job as NLP engineer and Text Analyst may Fall into Machine Learning Engineer job\n",
+    "    - Convert numeric data according to desired standard\n",
+    "        - eg: EUR to USD value, or standardization"
    ]
   },
   {
@@ -54,6 +65,8 @@
     "df.groupby(level=0).agg({'col':'mean'}) # Outermost = level 0\n",
     "# Size per group\n",
     "df.groupby('col').size()\n",
+    "# Adding subgroup aggregation information into dataframe\n",
+    "df[\"std_dev\"] = df.groupby(\"cat_col\")[\"num_col\"].transform(lambda x: x.std())\n",
     "```"
    ]
   },
@@ -92,9 +105,55 @@
     "sns.barplot(data=df, x=\"cat_col\", y=\"num_col\")\n",
     "# Explore group distribution\n",
     "df.groupby(\"cat_col\").agg({\"col1\": [\"mean\", \"std\"], \"col2\": [\"median\"]})\n",
-    "\n",
+    "# Generalize categorical data : Select n-th generalized category for n-th satisfied condition\n",
+    "df[\"Generalized_Category\"] = np.select(condition_list, generalized_category_list, default=\"Other\")\n",
+    "# Filtering outliers\n",
+    "seventy_fifth = df[\"num_col\"].quantile(0.75)\n",
+    "twenty_fifth = df[\"num_col\"].quantile(0.25)\n",
+    "iqr = seventy_fifth - twenty_fifth\n",
+    "upper = seventy_fifth + (1.5 * iqr)\n",
+    "lower = twenty_fifth - (1.5 * iqr)\n",
+    "df_without_outliers = df[(df[\"num_col\"] > lower) & (df[\"num_col\"] < upper)]\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handle missing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Check missing data\n",
+    "df.isna().sum()\n",
+    "# Drop missing values where <= 5% of data in column are missing , otherwise impute values\n",
+    "threshold = len(df) * 0.05\n",
+    "cols_to_drop = df.columns[df.isna().sum() <= threshold]\n",
+    "df.dropna(subset=cols_to_drop, inplace=True)\n",
+    "cols_with_missing_values = df.columns[salaries.isna().sum() > 0]\n",
+    "for col in cols_with_missing_values[:-1]:\n",
+    "    df[col].fillna(df[col].mode()[0])\n",
+    "subgroup_dict = df.groupby(\"cat_col\")[\"num_col\"].median().to_dict()\n",
+    "df[\"num_col\"] = df[\"num_col\"].fillna(df[\"cat_col\"].map(subgroup_dict))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
