Chapter 3 : Relationships in Data

--- a/Python/Exploratory Data Analysis in Python/takeaways.ipynb
+++ b/Python/Exploratory Data Analysis in Python/takeaways.ipynb
@@ -24,6 +24,7 @@
     "    - generate hypothesis for experiments\n",
     "    - explore the grouped distribution\n",
     "    - Visualize numeric distribution (histogram) and categorical distribution (barplot)\n",
+    "        - Use kdeplot for visualizing subgroup distribution in one plot for comparison with `cut` specified\n",
     "    - Handle outliers\n",
     "        - See and Visualize numeric mean, max with boxplot to gain insight about outliers\n",
     "        - filter data to drop outliers\n",
@@ -35,7 +36,11 @@
     "        - There might be so many diverse categories that needs to be generalized\n",
     "        - eg: job as NLP engineer and Text Analyst may Fall into Machine Learning Engineer job\n",
     "    - Convert numeric data according to desired standard\n",
-    "        - eg: EUR to USD value, or standardization"
+    "        - eg: EUR to USD value, or standardization\n",
+    "    - Visualize correlation with scatterplot (or use pairplot)\n",
+    "        - correlation only gives linear relationship information\n",
+    "        - correlation might be close to 0, but scatter plot may show strong non-linear relationship\n",
+    "        - Correlation might be high, but scatterplot may show quadratic relationship\n"
    ]
   },
   {
@@ -147,6 +152,143 @@
     "    df[col].fillna(df[col].mode()[0])\n",
     "subgroup_dict = df.groupby(\"cat_col\")[\"num_col\"].median().to_dict()\n",
     "df[\"num_col\"] = df[\"num_col\"].fillna(df[\"cat_col\"].map(subgroup_dict))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Date in pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Way 1 : During import\n",
+    "df = pd.read_csv('filename.csv', parse_dates = ['date_col1', 'date_col2'])\n",
+    "# Way 2 : Parsing using pandas date format\n",
+    "df[\"date_col\"] = pd.to_datetime(df[\"date_col\"], \n",
+    "                                format = \"%Y-%m-%d %H:%M:%S\",\n",
+    "                                errors='coerce')\n",
+    "# Way 3  : parsing using python date format\n",
+    "df[\"date_col\"] = df[\"date_col\"].dt.strftime(\"%d-%m-%Y\")\n",
+    "# Extract month information\n",
+    "df[\"date_col\"].dt.month\n",
+    "# Extract year information\n",
+    "df[\"date_col\"].dt.year\n",
+    "\n",
+    "# Resampling date\n",
+    "df.resample('M', on = 'date_col')['col1'].mean()\n",
+    "# Resampling count\n",
+    "df.resample('M', on = 'date_col').size()\n",
+    "# Add timezone in a datetime column\n",
+    "df['date_col'] = df['date_col'].dt.tz_localize('America/New_York', ambiguous='NaT')\n",
+    "# Convert to another timezone\n",
+    "df['date_col'] = df['date_col'].dt.tz_convert('Europe/London')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Date in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from datetime import date\n",
+    "from datetime import datetime\n",
+    "# Create date\n",
+    "d =  date(2017, 6, 21) # ISO format: YYYY-MM-DD\n",
+    "# Create a datetime\n",
+    "dt = datetime(year= 2017 , month= 10 , day= 1 , hour= 15 , minute= 23 , second= 25 , microsecond= 500000 )\n",
+    "# Change value of existing datetime\n",
+    "dt_changed = dt.replace(minute=0, second=0, microsecond=0)\n",
+    "# Sort date\n",
+    "dates_ordered = sorted(date_list)\n",
+    "# Parse datetime\n",
+    "dt = datetime.strptime(\"12/30/2017 15:19:13\", \"%m/%d/%Y %H:%M:%S\")\n",
+    "d.isoformat() # Express the date in ISO 8601 format\n",
+    "print(d.strftime(\"%Y/%m/%d\")) # Print date in Format: YYYY/MM/DD\n",
+    "print(dt.strftime(\"%Y-%m-%d %H:%M:%S\")) # Print datetime in specific format\n",
+    "# Extract information\n",
+    "d.year # Extract year\n",
+    "d.month # Extract month\n",
+    "d.day # Extract day\n",
+    "d.weekday() # Extract weekday\n",
+    "##### Date addition / subtraction\n",
+    "from datetime import timedelta\n",
+    "delta = d2 - d # Subtract two dates\n",
+    "delta.days # Elapsed time in days\n",
+    "delta.total_seconds() # Elapsed time in seconds\n",
+    "td = timedelta(days=29) # Create a 29 day timedelta\n",
+    "print(d + td) # Add delta with existing date\n",
+    "# timestamp value\n",
+    "ts = 1514665153.0\n",
+    "# Convert to datetime from timestamp and print\n",
+    "print(datetime.fromtimestamp(ts))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Co-efficient and p-value\n",
+    "from scipy import stats\n",
+    "pearson_coef, p_val = stats.pearsonr(df[\"col1\"], df[\"col2\"])\n",
+    "# Visualize correlation\n",
+    "import seaborn as sns\n",
+    "sns.lmplot(x=\"col1\", y=\"col2\", data=df, ci=None)\n",
+    "plt.show()\n",
+    "\n",
+    "# Find correlation among all columns in a dataframe\n",
+    "correlations = df.corr() \n",
+    "# Use heatmap for correlation visualization (Scatterplot is not a good choice for dataframes with more than 2 variables)\n",
+    "sns.heatmap(correlations, annot=True) # use cmap='coolwarm' to provide color map\n",
+    "# Bend x label ticks 45 degree to avoid overlappings with each-other\n",
+    "plt.xticks(rotation=45) \n",
+    "plt.title('Correlations')\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KDE plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "sns.kdeplot(data=df, x=\"num_col\", hue=\"cat_col\", cut=0, cumulative=False)\n",
+    "plt.show()\n",
     "```"
    ]
   },
