Chapter 4 : Turning Exploratory Analysis into Action

--- a/Python/Exploratory Data Analysis in Python/takeaways.ipynb
+++ b/Python/Exploratory Data Analysis in Python/takeaways.ipynb
@@ -40,7 +40,18 @@
     "    - Visualize correlation with scatterplot (or use pairplot)\n",
     "        - correlation only gives linear relationship information\n",
     "        - correlation might be close to 0, but scatter plot may show strong non-linear relationship\n",
-    "        - Correlation might be high, but scatterplot may show quadratic relationship\n"
+    "        - Correlation might be high, but scatterplot may show quadratic relationship\n",
+    "    - Check if sample accurately represents the population\n",
+    "        - Check class imbalance with value counts\n",
+    "        - Check combination of classes with crosstab for both median value and counts\n",
+    "    - Create necessary columns for further analysis\n",
+    "        - From category or string column to numeric column\n",
+    "        - From range of value to categorical by cutting into bins\n",
+    "        - From date column to more granular representation (weekday, month etc)\n",
+    "    - Generate hypothesis and arrive at conclusive evidence\n",
+    "        - Gather enough data and check correlations\n",
+    "        - Do all correlation make sense? Test with hypothesis testing\n",
+    "        - Hypothesis test will tell if given enough data, the relationship is true or not."
    ]
   },
   {
@@ -97,8 +108,10 @@
     "df.select_dtypes(\"number\").head()\n",
     "# Convert to desired data type\n",
     "df[\"col\"] = df[\"col\"].astype(int)\n",
-    "# See categories\n",
-    "df.value_counts(\"cat_col\")\n",
+    "# See categories, label frequencies and value distribution\n",
+    "df[\"cat_col\"].value_counts(normalize=True) # Check class imbalance\n",
+    "pd.crosstab(df[\"cat_col1\" ], df[ \"cat_col2\" ]) # Check distribution of class combinations\n",
+    "pd.crosstab(df[\"cat_col1\" ], df[ \"cat_col2\" ],values=planes[\"num_col\"], aggfunc=\"median\")) # Check distribution of median values in class combinations\n",
     "# Validating categorical columns\n",
     "df[\"cat_col\"].isin([\"Cat 1\", \"Cat 2\"])\n",
     "# See numerical statistics\n",
@@ -119,6 +132,14 @@
     "upper = seventy_fifth + (1.5 * iqr)\n",
     "lower = twenty_fifth - (1.5 * iqr)\n",
     "df_without_outliers = df[(df[\"num_col\"] > lower) & (df[\"num_col\"] < upper)]\n",
+    "# Create new categorical columns\n",
+    "twenty_fifth = df[\"num_col\"].quantile(0.25)\n",
+    "median = df[\"num_col\"].median()\n",
+    "seventy_fifth = df[\"num_col\"].quantile(0.75)\n",
+    "maximum = df[\"num_col\"].max()\n",
+    "labels = [\"A\", \"B\", \"C\",\"D\"]\n",
+    "bins = [0, twenty_fifth, median, seventy_fifth, maximum]\n",
+    "planes[\"Price_Category\"] = pd.cut(df[\"num_col\"], labels=labels, bins=bins)\n",
     "```"
    ]
   },
@@ -142,7 +163,30 @@
    "source": [
     "```\n",
     "# Check missing data\n",
+    "df.isna().any()\n",
     "df.isna().sum()\n",
+    "# Visualize missing data information\n",
+    "import missingno as msno\n",
+    "import matplotlib.pyplot as plt\n",
+    "msno.matrix(df)\n",
+    "plt.show()\n",
+    "\n",
+    "# Drop missing data column\n",
+    "df_dropped = df.dropna(subset = ['col'], axis = 1) # 0 for row\n",
+    "df.dropna(axis = 0) # Drop entire row for missing value (default)\n",
+    "df.dropna(axis = 1) # Drop entire column for missing value\n",
+    "\n",
+    "# Replace/impute missing data with single value\n",
+    "col_mean = df['col'].mean()\n",
+    "df_imputed = df.fillna({'col': col_mean})\n",
+    "df['col'].replace(to_replace=np.nan, value = some_mean,inplace = True) # Alternative\n",
+    "# Replace/impute missing data with series\n",
+    "series_imp = df['col1'] * 5\n",
+    "df_imputed = df.fillna({'col2':series_imp})\n",
+    "\n",
+    "df[\"col\"].value_counts() # Look out for suspicious values\n",
+    "\n",
+    "##### Strategic dropping example ########\n",
     "# Drop missing values where <= 5% of data in column are missing , otherwise impute values\n",
     "threshold = len(df) * 0.05\n",
     "cols_to_drop = df.columns[df.isna().sum() <= threshold]\n",
@@ -295,7 +339,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Generate hypothesis based on assumption of correlation\n",
+    "- Find feasibility of assumptions with hypothesis testing to reach conclusive evidence"
+   ]
   }
  ],
  "metadata": {
